--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   sensormusic.services:
+    build: .
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
@@ -14,7 +15,9 @@ services:
     depends_on:
       - db
   db:
-    image: "mcr.microsoft.com/mssql/server"
+    image: "microsoft/mssql-server-linux:2017-latest"
     environment:
         SA_PASSWORD: "admSensorMusic123"
         ACCEPT_EULA: "Y"
+    ports:
+		- "1401:1433"
